master: backend adoptation